--- a/MoneyMarket.Business/MoneyMarket.Business.csproj
+++ b/MoneyMarket.Business/MoneyMarket.Business.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slack\Integration\SlackCommandExecuter.cs" />
     <Compile Include="Slack\Integration\SlackIntegrationBusiness.cs" />
+    <Compile Include="Slack\Integration\SlackMessageGenerator.cs" />
     <Compile Include="Slack\Integration\SlackResponse.cs" />
     <Compile Include="Slack\Integration\SlackUser.cs" />
     <Compile Include="Slack\Integration\SlackMessage.cs" />
