--- a/MoneyMarket.Dto/MoneyMarket.Dto.csproj
+++ b/MoneyMarket.Dto/MoneyMarket.Dto.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Scope.cs" />
     <Compile Include="Team.cs" />
     <Compile Include="TeamCryptoCurrencyBalance.cs" />
+    <Compile Include="TeamNotification.cs" />
     <Compile Include="TeamScope.cs" />
     <Compile Include="Ticker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
