set alarm unique index bug fix.

--- a/MoneyMarket.DataAccess/MoneyMarket.DataAccess.csproj
+++ b/MoneyMarket.DataAccess/MoneyMarket.DataAccess.csproj
@@ -120,6 +120,10 @@
     <Compile Include="Migrations\201801072038266_Version15.Designer.cs">
       <DependentUpon>201801072038266_Version15.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801082207318_Version16.cs" />
+    <Compile Include="Migrations\201801082207318_Version16.Designer.cs">
+      <DependentUpon>201801082207318_Version16.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\TeamNotification.cs" />
     <Compile Include="Models\TeamCryptoCurrencyBalance.cs" />
     <Compile Include="Models\CryptoCurrency.cs" />
@@ -198,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801072038266_Version15.resx">
       <DependentUpon>201801072038266_Version15.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801082207318_Version16.resx">
+      <DependentUpon>201801082207318_Version16.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
