--- a/MoneyMarket.Api/Web.config
+++ b/MoneyMarket.Api/Web.config
@@ -5,7 +5,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MoneyDbConnection" connectionString="Server=.\;Database=CryptoCurrency;User Id=mute;Password=1907;" providerName="System.Data.SqlClient" />
+    <!--<add name="MoneyDbConnection" connectionString="Server=.\;Database=CryptoCurrency;User Id=mute;Password=1907;" providerName="System.Data.SqlClient" />-->
+    <add name="MoneyDbConnection" connectionString="Server=SQL5036.site4now.net,1433;Database=DB_9F5359_cryptocurrency;User Id=DB_9F5359_cryptocurrency_admin;Password=C88VB5QE6mute;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="MailFrom" value="info@raqun.co" />
