exception aspect business added.

--- a/MoneyMarket.Business/MoneyMarket.Business.csproj
+++ b/MoneyMarket.Business/MoneyMarket.Business.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Common\CommonBusiness.cs" />
     <Compile Include="CryptoCurrency\TeamCryptoCurrencyBalanceBusiness.cs" />
     <Compile Include="CryptoCurrency\Tickers\BitStamp\Ripple.cs" />
+    <Compile Include="Exception\AppExceptionAttribute.cs" />
     <Compile Include="Notification\TeamNotificationBusiness.cs" />
     <Compile Include="Notification\NotificationBusiness.cs" />
     <Compile Include="CryptoCurrency\JsonCurrency.cs" />
