--- a/MoneyMarket.Business/packages.config
+++ b/MoneyMarket.Business/packages.config
@@ -8,7 +8,8 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="NEST" version="5.3.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="PostSharp" version="4.3.33" targetFramework="net461" />
+  <package id="PostSharp" version="5.0.43" targetFramework="net461" developmentDependency="true" />
+  <package id="PostSharp.Redist" version="5.0.43" targetFramework="net461" />
   <package id="ServiceStack.Common" version="4.5.12" targetFramework="net461" />
   <package id="ServiceStack.Interfaces" version="4.5.12" targetFramework="net461" />
   <package id="ServiceStack.Redis" version="4.5.12" targetFramework="net461" />
