--- a/MoneyMarket.Api/Web.config
+++ b/MoneyMarket.Api/Web.config
@@ -5,11 +5,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-   <add name="MoneyDbConnection" connectionString="Server=.\;Database=CryptoCurrency;User Id=mute;Password=1907;" providerName="System.Data.SqlClient" />
-   <!--  <add name="MoneyDbConnection" connectionString="Server=SQL5036.site4now.net,1433;Database=DB_9F5359_cryptocurrency;User Id=DB_9F5359_cryptocurrency_admin;Password=C88VB5QE6mute;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="MoneyDbConnection" connectionString="data source=WIN-2HBPI0DG0PG\SQLEXPRESS;initial catalog=CryptoCurrency;user Id=sa;password=Br922TA1;" providerName="System.Data.SqlClient" />-->
+   <!--<add name="MoneyDbConnection" connectionString="Server=.\;Database=CryptoCurrency;User Id=mute;Password=1907;" providerName="System.Data.SqlClient" />-->
+     <add name="MoneyDbConnection" connectionString="Server=SQL5036.site4now.net,1433;Database=DB_9F5359_cryptocurrency;User Id=DB_9F5359_cryptocurrency_admin;Password=C88VB5QE6mute;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="CurrencyApiUrl" value="http://www.tcmb.gov.tr/kurlar/today.xml"/>
     <add key="MailFrom" value="info@raqun.co" />
     <add key="MailDisplayName" value="Raqun Ekibi" />
     <add key="MailPass" value="Br922TA1" />
