--- a/MoneyMarket.Api/Web.config
+++ b/MoneyMarket.Api/Web.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
    <!--<add name="MoneyDbConnection" connectionString="Server=.\;Database=CryptoCurrency;User Id=mute;Password=1907;" providerName="System.Data.SqlClient" />-->
-     <add name="MoneyDbConnection" connectionString="Server=SQL5036.site4now.net,1433;Database=DB_9F5359_cryptocurrency;User Id=DB_9F5359_cryptocurrency_admin;Password=C88VB5QE6mute;" providerName="System.Data.SqlClient" />
+     <add name="MoneyDbConnection" connectionString="Server=**,1433;Database=**;User Id=DB_9F5359_cryptocurrency_admin;Password=**;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="CurrencyApiUrl" value="http://www.tcmb.gov.tr/kurlar/today.xml"/>
@@ -21,20 +21,19 @@
     <add key="IosCerFile" value="iOs.p12" />
     <add key="IosCerFilePwd" value="123" />
     <add key="AndroidSenderId" value="136658846553" />
-    <add key="AndroidAuthToken" value="AIzaSyCW8L-0bXAJyoAkloQkL7pVaPmWSZwpJT8" />
+    <add key="AndroidAuthToken" value="**" />
     <add key="UseProxy" value="false" />
-    <add key="ProxyUrl" value="dtekprxp1.fw.dteknoloji.com.tr:8080" />
+    <add key="ProxyUrl" value="**" />
     <add key="MaxBulkInsertCount" value="500" />
     <add key="MaxProductRefreshCount" value="1000" />
-    <add key="ConnectionUrlToElasticServer" value="http://78.135.114.73:9200/" />
+    <add key="ConnectionUrlToElasticServer" value="**" />
     <add key="ElasticSearchTimeOutInSeconds" value="5" />
     <add key="SlackApiUrl" value="https://slack.com/api/" />
-    <add key="SlackToken" value="xoxb-280481595985-B9HRMZDOd5NHWUHBWqrUbXFP" />
-    <add key="SlackTokenAkhisar" value="xoxp-283062445126-282117481731-281542580608-7fec164868f34dfdb2c64063b47f770f" />
-    <add key="SlackClientId" value="287643630675.289900598358" />
+    <add key="SlackToken" value="**" /> 
+    <add key="SlackClientId" value="**" />
     <add key="SlackScope" value="bot,chat:write:bot,channels:history" />
-    <add key="SlackBot" value="xoxb-290106562807-mo6sm6P1L3nEjZpR12TyyfuR" />
-    <add key="SlackClientSecret" value="53ceaff30590dbe4f5b688ea2f5f2acd" />
+    <add key="SlackBot" value="**" />
+    <add key="SlackClientSecret" value="**" />
     <add key="EthDiff" value="20" />
     <add key="XlmBalance" value="10433" />
   </appSettings>
